[mhv-61347] fixed misaligned icon.

--- a/src/applications/mhv-medications/sass/medications.scss
+++ b/src/applications/mhv-medications/sass/medications.scss
@@ -153,6 +153,9 @@
 .renew-card-details > p {
   margin: 0px;
 }
+#filter > span {
+  vertical-align: top;
+}
 
 .pagination {
   max-width: 500px;
